# claw-ui

./: .gitignore  Agent-Native UI System MVP.md  README.md  TRIGGER_TEST.md  design-system.md  docker-compose.yml  plan.md
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py  models.py  state.py
backend/app/routes/: auip.py  events.py
backend/app/ws/: __init__.py  manager.py
claw-ui/: SKILL.md
claw-ui/agents/: openai.yaml
frontend/: Dockerfile  package-lock.json  package.json  server.js  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Dashboard.tsx  Layout.tsx  WidgetRenderer.tsx
frontend/components/widgets/: CryptoWidget.tsx  IframeWidget.tsx  NewsWidget.tsx  TextWidget.tsx  TodoWidget.tsx  WeatherWidget.tsx
frontend/lib/: store.ts  types.ts  ws.ts
skill/: SKILL.md
tmp/: add-iframe-widget.json
