[project]
name = "claw-ui-backend"
version = "0.1.0"
description = "FastAPI backend for the Agent-Native UI MVP"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
